--- a/templates/create_transaction.html
+++ b/templates/create_transaction.html
@@ -3,14 +3,50 @@
 {%block form%}
 	<form action="{{ url_for('createTransaction', account_id=account_id) }}" method=post>
 		<div class='form-group'>
-		  <input class='form-control' type=number name=amount placeholder="Amount" required>
+		  <input class='form-control' type=number min=1 name=amount placeholder="Amount" required>
 		</div>
 		<div class='form-group'>
 		  <input type=hidden name=csrftoken value="{{csrf_token()}}">
 			<select name = "trans_type" class='form-control' required>
-				<option value="">Please Transaction Type</option>
+				<option value="">Transaction Type</option>
 				<option value="draw">draw</option>
 				<option value="payment">payment</option>
+			</select>
+		</div>
+		<div class='form-group'>
+			<select name="transaction_day" class='form-control' required>
+				<option value="">Transaction Day</option>
+				<option value="0">0</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10</option>
+				<option value="11">11</option>
+				<option value="12">12</option>
+				<option value="13">13</option>
+				<option value="14">14</option>
+				<option value="15">15</option>
+				<option value="16">16</option>
+				<option value="17">17</option>
+				<option value="18">18</option>
+				<option value="19">10</option>
+				<option value="20">20</option>
+				<option value="21">21</option>
+				<option value="22">22</option>
+				<option value="23">23</option>
+				<option value="24">24</option>
+				<option value="25">25</option>
+				<option value="26">26</option>
+				<option value="27">27</option>
+				<option value="28">28</option>
+				<option value="29">29</option>
+				<option value="30">30</option>
 			</select>
 		</div>
 		<div class='form-group'>
