--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -3,7 +3,7 @@
 {%block form%}
 	<form action="{{ url_for('createAccount') }}" method=post>
 		<div class='form-group'>
-		  <input class='form-control' type=number min=1000 max=10000 name=creditlimit placeholder="Credit Limit ($)" required>
+		  <input class='form-control' type=number min=1000 name=creditlimit placeholder="Credit Limit ($)" required>
 		</div>
 		<div class='form-group'>
 		  <input  type=hidden name=csrftoken value="{{csrf_token()}}">
